# few-shot-keypoints

./: .gitignore  README.md  pyproject.toml
few_shot_keypoints/: dataset_matching.py  dataset_object_crop_matching.py  main.py  match_dataset.py  matcher.py  paths.py  results.py
few_shot_keypoints/datasets/: augmentations.py  coco_dataset.py  data_parsers.py  transforms.py
few_shot_keypoints/dino_vit_feature_paper/: .gitignore  compare.ipynb  dino_vit_features_paper.py  extractor.py
few_shot_keypoints/featurizers/: ViT_featurizer.py  __init__.py  base.py  combined_featurizer.py  dift_featurizer.py  dino_vit_feature_paper.py  registry.py  test_inference_speed.py
few_shot_keypoints/featurizers/dino_features_paper/: extractor_skil.py  featurizer.py
few_shot_keypoints/featurizers/dino_vit_paper/: extractor_original.py  extractor_skil.py  featurizer.py  test_equal_to_hf.py
notebooks/: RPL_correspondence+detection.ipynb  compare_featurizers.ipynb  cotracker.ipynb  depth_anything.ipynb  dinov2.ipynb  mobileSAM.ipynb  open-vocab-detection.ipynb  radio.ipynb  spair.ipynb  test_multi_gpu_inference.ipynb  visualize_results.ipynb
results/SPAIR-correspondences/: dift.csv
scripts/: coco_eval.py  fiftyone_visualizer.py  generate_SAM_masks_for_coco_keypoints_dataset.py  inference_time.py  match_dataset.py  match_spair_dataset.py  results.py  run_dsd_matching.py  run_matching_experiments.py  spair-correspondence-matching.py  torch_memory_profile.py  train_detector.py
scripts/datasets/dsd/: calculate_dsd_metrics.py  run_dsd_matching.py
scripts/datasets/kil/: calculate_metrics.py  run_kil_crop_matching.py  run_kil_matching.py  visualize_matching_results.ipynb
