[project]
name = "few_shot_keypoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "airo-dataset-tools",
    "diffusers",
    "draccus",
    "einops>=0.8.1",
    "numpy",
    "open-clip-torch>=3.1.0",
    "torch>=2.7.1",
    "torchvision",
    "transformers>=4.56.0",
    "xformers",
]

[tool.setuptools]
packages = ["few_shot_keypoints"]
