[project]
name = "few_shot_keypoints"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "airo-dataset-tools",
    "diffusers",
    "draccus",
    "einops>=0.8.1",
    "imageio[ffmpeg]>=2.37.0",
    "ipykernel>=6.30.1",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.7",
    "numpy",
    "open-clip-torch>=3.1.0",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "torchvision",
    "transformers>=4.56.0", # SAM3 requires transformers 5.0.0 or higher
    "xformers",
]

[tool.setuptools]
packages = ["few_shot_keypoints"]
